syntax = "proto3";

package AcFunDanmu.Im.Basic;

message UnregisterRequest {}

message UnregisterResponse {}
